<resources>
    <string name="app_name">InventiApp</string>
    <string name="skip">skip</string>
    <string name="_107_reviews">(107 Reviews)</string>
    <string name="g8502_preston_rd_inglewood">G8502 Preston Rd. Inglewood</string>
    <string name="month">/month</string>
    <string name="_1500">$1500</string>
    <string name="pinebrook_plaza">Pinebrook Plaza</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="_5_0">5.0</string>
    <string name="_3_5_km_50_min">3.5 km/50 min</string>
<<<<<<< HEAD


    <string name="resend_code"><u>Resend code</u></string>
    <string name="sign_in"><u>Sign in</u></string>
    <string name="terms_and_condition"><u>Terms &amp; Conditions</u></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_image">test image</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="_1">+1 ⌄</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="gender">Gender</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="don_t_worry_only_you_can_see_your_personal_ndata_no_one_else_will_be_able_to_see_it">Don\'t worry, only you can see your personal \ndata. No one else will be able to see it.</string>
    <string name="complete_your_profile">Complete Your Profile</string>

=======
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> 1f04ed0 (Finish FavFragment screen)
</resources>