<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MapsFragment">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- A CardView to contain the search bar for a cleaner look and elevation.
         It's constrained to the top of the parent. -->
    <androidx.cardview.widget.CardView
        android:id="@+id/searchCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <!-- LinearLayout to hold the search EditText and Button. -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <!-- EditText for the user to type their search query -->
            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Search for a location..."
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:background="@android:color/transparent" />

            <!-- Button to trigger the search -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                app:cornerRadius="20dp"
                app:backgroundTint="@color/darkblue"
                style="@style/Widget.MaterialComponents.Button" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_preview_location"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/map_container"
                android:layout_width="0dp"
                android:layout_height="120dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/map_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/apartment"
                    android:background="#CCCCCC"
                    tools:ignore="ContentDescription" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/map_container">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="4dp">

                    <TextView
                        android:id="@+id/property_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/pinebrook_plaza" />

                    <TextView
                        android:id="@+id/property_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/_1500" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/month" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="4dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/ic_location_pin"
                        android:layout_marginEnd="4dp"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:id="@+id/property_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/g8502_preston_rd_inglewood" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="4dp">

                    <TextView
                        android:id="@+id/property_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_0"
                        android:textStyle="bold"
                        android:layout_marginEnd="4dp" />

                    <LinearLayout
                        android:id="@+id/star_rating_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginEnd="4dp">
                        <ImageView android:layout_width="16dp" android:layout_height="16dp" android:src="@drawable/ic_star_gold" tools:ignore="ContentDescription" />
                        <ImageView android:layout_width="16dp" android:layout_height="16dp" android:src="@drawable/ic_star_gold" tools:ignore="ContentDescription" />
                        <ImageView android:layout_width="16dp" android:layout_height="16dp" android:src="@drawable/ic_star_gold" tools:ignore="ContentDescription" />
                        <ImageView android:layout_width="16dp" android:layout_height="16dp" android:src="@drawable/ic_star_gold" tools:ignore="ContentDescription" />
                        <ImageView android:layout_width="16dp" android:layout_height="16dp" android:src="@drawable/ic_star_gold" tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/review_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_107_reviews" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/ic_run"
                        android:layout_marginEnd="4dp"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:id="@+id/distance_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_5_km_50_min" />
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>